# project_y

./: .gitignore  CMakeLists.txt  build.bat  install.bat
engine/: CMakeLists.txt
engine/include/: engine.h
engine/shaders/: default.frag  default.vert
engine/src/: model_math.c  obj_loader.c  obj_loader.h  render.c  shader_loader.c  shader_loader.h
game/: CMakeLists.txt
game/models/mtl/: closet.mtl
game/src/: main.c
